Fixed bug that Images get stretched when a Warning gets displayed in Web

--- a/code/smarty/templates/web/css/general.css
+++ b/code/smarty/templates/web/css/general.css
@@ -349,7 +349,6 @@ img.center {
 	margin-left: auto;
 	margin-right: auto;
 	width:100%;
-	height:100%;
 }
 
 #account {
